start task 2. change Query a little

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="D:/Fall 2020/INFSCI 2140 INFORMATION RETRIEVAL/Assignment 3 - Java/lib/lucene-analyzers-common-6.3.0.jar"/>
 	<classpathentry kind="lib" path="D:/Fall 2020/INFSCI 2140 INFORMATION RETRIEVAL/Assignment 3 - Java/lib/lucene-backward-codecs-6.3.0.jar"/>
-	<classpathentry kind="lib" path="D:/Fall 2020/INFSCI 2140 INFORMATION RETRIEVAL/Assignment 3 - Java/lib/lucene-core-6.3.0.jar"/>
+	<classpathentry kind="lib" path="D:/Fall 2020/INFSCI 2140 INFORMATION RETRIEVAL/Assignment 3 - Java/lib/lucene-core-6.3.0.jar" sourcepath="D:/Fall 2020/INFSCI 2140 INFORMATION RETRIEVAL/Assignment 3 - Java/lib"/>
 	<classpathentry kind="lib" path="D:/Fall 2020/INFSCI 2140 INFORMATION RETRIEVAL/Assignment 3 - Java/lib/lucene-queryparser-6.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
